# remotepad

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  package.json  readme.md  remotepad.sh
client/: client.js  draw.css  index.html
server/: XGetScreen.js  XRemotePad.js  XTools.js  config.js  server.js
src/: app_config.cpp  app_config.h  draw_color.cpp  draw_color.h  embedded_client.h  main.cpp  remote_pad.cpp  remote_pad.h  web_server.cpp  web_server.h  x_screen.cpp  x_screen.h  x_tools.cpp  x_tools.h
src/platform/: overlay.h  screen_capture.h
src/platform/linux/: linux_overlay.cpp  linux_overlay.h  linux_screen_capture.cpp  linux_screen_capture.h
src/platform/windows/: win_overlay.cpp  win_overlay.h  win_screen_capture.cpp  win_screen_capture.h
tools/: embed_client.ps1  embed_client.sh  release.ps1  release.sh
